--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 20px;
             text-align: center;
         }
-        .item {
+        .item, .resource {
             display: inline-block;
             margin: 10px;
             padding: 10px;
@@ -32,67 +32,108 @@
 <body>
     <h1>クラフトシステム</h1>
     
-    <!-- シーン1: アイテム選択とクラフト -->
+    <!-- シーン1: 資源集め -->
     <div id="scene1" class="scene active">
-        <div id="inventory">
-            <div class="item" data-item="木材">🪵 木材</div>
-            <div class="item" data-item="石">🪨 石</div>
-            <div class="item" data-item="種">🌱 種</div>
-            <div class="item" data-item="水">💧 水</div>
+        <h2>資源集め</h2>
+        <div id="resources">
+            <div class="resource" data-resource="木材">🪵 木材</div>
+            <div class="resource" data-resource="石">🪨 石</div>
+            <div class="resource" data-resource="水">💧 水</div>
         </div>
-        <button id="craftButton">クラフトする</button>
-        <div id="craftMessage"></div>
+        <button onclick="changeScene('scene2')">在庫管理へ</button>
     </div>
 
-    <!-- シーン2: 作成したアイテム表示 -->
+    <!-- シーン2: 在庫管理 -->
     <div id="scene2" class="scene">
-        <h2>作成したアイテム</h2>
-        <div id="craftedItem">まだアイテムは作成されていません。</div>
-        <button onclick="changeScene('scene1')">戻る</button>
+        <h2>在庫管理</h2>
+        <div id="inventory">
+            <!-- 在庫がここに表示されます -->
+        </div>
+        <button onclick="changeScene('scene3')">クラフトへ</button>
+        <button onclick="changeScene('scene1')">資源集めへ戻る</button>
+    </div>
+
+    <!-- シーン3: クラフト -->
+    <div id="scene3" class="scene">
+        <h2>クラフト</h2>
+        <div id="craftingOptions">
+            <!-- クラフトできるアイテムがここに表示されます -->
+        </div>
+        <button onclick="changeScene('scene2')">在庫管理へ戻る</button>
     </div>
 
     <script>
-        // 以前作成したアイテムを保存するための配列
-        let craftedItems = [];
+        // 資源の在庫
+        let inventory = {
+            '木材': 0,
+            '石': 0,
+            '水': 0
+        };
 
-        // アイテムを選択するためのイベント
-        document.querySelectorAll('.item').forEach(item => {
-            item.addEventListener('click', () => {
-                item.style.backgroundColor = '#d0f0c0'; // アイテムを選択したときの背景色
+        // クラフトできるアイテムの設定（必要資源）
+        const craftingItems = {
+            '木の剣': { '木材': 2, '石': 1 },
+            '石のツルハシ': { '木材': 1, '石': 3 }
+        };
+
+        // 資源を集める
+        document.querySelectorAll('.resource').forEach(resource => {
+            resource.addEventListener('click', () => {
+                const resourceName = resource.dataset.resource;
+                inventory[resourceName]++;
+                updateInventory();
             });
         });
 
-        // クラフトボタンのイベント
-        document.getElementById('craftButton').addEventListener('click', () => {
-            const selectedItems = [];
-            document.querySelectorAll('.item').forEach(item => {
-                if (item.style.backgroundColor === 'rgb(208, 240, 192)') {
-                    selectedItems.push(item.dataset.item);
+        // 在庫管理シーンを更新
+        function updateInventory() {
+            const inventoryDiv = document.getElementById('inventory');
+            inventoryDiv.innerHTML = '';  // 在庫の内容をリセット
+
+            // 在庫の内容を表示
+            for (const resource in inventory) {
+                const resourceDiv = document.createElement('div');
+                resourceDiv.textContent = `${resource}: ${inventory[resource]} 個`;
+                inventoryDiv.appendChild(resourceDiv);
+            }
+        }
+
+        // クラフトシーンを更新
+        function updateCraftingOptions() {
+            const craftingDiv = document.getElementById('craftingOptions');
+            craftingDiv.innerHTML = '';  // クラフト選択肢をリセット
+
+            // クラフトできるアイテムを表示
+            for (const item in craftingItems) {
+                const itemRequirements = craftingItems[item];
+                let canCraft = true;
+
+                // 必要資源が足りているかを確認
+                for (const resource in itemRequirements) {
+                    if (inventory[resource] < itemRequirements[resource]) {
+                        canCraft = false;
+                        break;
+                    }
                 }
-            });
 
-            if (selectedItems.length === 2) {
-                const craftedItem = selectedItems.join(" と "); // 作成したアイテムを表示
-                craftedItems.push(craftedItem);
-                document.getElementById('craftMessage').textContent = '';
-                changeScene('scene2');  // 結果シーンに切り替え
-                updateCraftedItems(); // 作成したアイテムを更新
-            } else {
-                document.getElementById('craftMessage').textContent = 'アイテムを2つ選んでください。';
+                // アイテムを作れる場合、ボタンを表示
+                if (canCraft) {
+                    const craftButton = document.createElement('button');
+                    craftButton.textContent = `${item} を作る`;
+                    craftButton.addEventListener('click', () => craftItem(item, itemRequirements));
+                    craftingDiv.appendChild(craftButton);
+                }
             }
+        }
 
-            // アイテム選択をリセット
-            document.querySelectorAll('.item').forEach(item => item.style.backgroundColor = '');
-        });
-
-        // 作成したアイテムをシーン2に表示
-        function updateCraftedItems() {
-            const craftedItemDiv = document.getElementById('craftedItem');
-            if (craftedItems.length === 0) {
-                craftedItemDiv.textContent = 'まだアイテムは作成されていません。';
-            } else {
-                craftedItemDiv.textContent = '作成したアイテム: ' + craftedItems.join(', ');
+        // アイテムをクラフト
+        function craftItem(item, requirements) {
+            // 必要な資源を減らす
+            for (const resource in requirements) {
+                inventory[resource] -= requirements[resource];
             }
+            updateInventory();  // 在庫を更新
+            alert(`${item} を作成しました！`);
         }
 
         // シーンを切り替える関数
@@ -106,6 +147,16 @@
             // 指定されたシーンを表示する
             const sceneToShow = document.getElementById(sceneId);
             sceneToShow.classList.add('active');
+
+            // クラフトシーンを表示する場合、クラフトオプションを更新
+            if (sceneId === 'scene3') {
+                updateCraftingOptions();
+            }
+
+            // 在庫管理シーンを表示する場合、在庫を更新
+            if (sceneId === 'scene2') {
+                updateInventory();
+            }
         }
     </script>
 </body>
