--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <div id="scene1" class="scene active">
         <h2>資源集め</h2>
         <div id="resources">
-            <div class="resource" data-resource="オーク">🪵 木材</div>
-            <div class="resource" data-resource="石">🪨 石</div>
-            <div class="resource" data-resource="水">💧 水</div>
-            <div class="resource" data-resource="白樺">🪵 木材</div>
-            <div class="resource" data-resource="種">🌱 木材</div>
-            <div class="resource" data-resource="土">🟫 木材</div>
+            <div class="resource" data-resource="オーク">オーク</div>
+            <div class="resource" data-resource="落ちてる石">落ちてる石</div>
+            <div class="resource" data-resource="水">水</div>
+            <div class="resource" data-resource="白樺">白樺</div>
+            <div class="resource" data-resource="種">種</div>
+            <div class="resource" data-resource="土">土</div>
         </div>
         <button onclick="changeScene('scene2')">在庫管理へ</button>
     </div>
