--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2>資源集め</h2>
         <div id="resources">
             <div class="resource" data-resource="オーク">オーク</div>
-            <div class="resource" data-resource="落ちている石">落ちている石</div>
+            <div class="resource" data-resource="小石">小石</div>
             <div class="resource" data-resource="水">水</div>
             <div class="resource" data-resource="白樺">白樺</div>
             <div class="resource" data-resource="種">種</div>
