--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <div class="resource" data-resource="白樺">白樺</div>
             <div class="resource" data-resource="種">種</div>
             <div class="resource" data-resource="土">土</div>
+            <div class="resource" data-resource="孔雀石">孔雀石</div>
         </div>
         <button onclick="changeScene('scene2')">在庫管理へ</button>
     </div>
